@@ -441,10 +441,10 @@ class eqLogic {
         }
         $hasOnlyEventOnly = $this->hasOnlyEventOnlyCmd();
         if($hasOnlyEventOnly){
-         $sql = 'SELECT `value` FROM cache 
-         WHERE `key`="widgetHtml' . $_version . $this->getId().'"';
-         $result = DB::Prepare($sql, array(), DB::FETCH_TYPE_ROW);
-         if ($result['value'] != '') {
+           $sql = 'SELECT `value` FROM cache 
+           WHERE `key`="widgetHtml' . $_version . $this->getId().'"';
+           $result = DB::Prepare($sql, array(), DB::FETCH_TYPE_ROW);
+           if ($result['value'] != '') {
             return $result['value'];
         }
     }
@@ -474,7 +474,8 @@ class eqLogic {
         '#cmd#' => $cmd_html,
         '#style#' => '',
         '#max_width#' => '650px',
-        '#logicalId#' => $this->getLogicalId()
+        '#logicalId#' => $this->getLogicalId(),
+        '#battery#' => ($this->getConfiguration('doNotDisplayBatteryLevel',0) == 0) ? $this->getConfiguration('batteryStatus',-1) : -1,
         );
     if ($_version == 'dview' || $_version == 'mview' && $this->getDisplay('doNotShowObjectNameOnView',0) == 0) {
         $object = $this->getObject();
@@ -650,6 +651,8 @@ public function batteryStatus($_pourcent) {
         $message .= $this->getHumanName() . __(' a été désactivé car il n\'a plus de batterie (', __FILE__) . $_pourcent . ' %)';
         message::add($this->getEqType_name(), $message, '', $logicalId);
     }
+    $this->setConfiguration('batteryStatus',$_pourcent);
+    $this->save();
 }
 
 public function refreshWidget() {
